fix(style): make button and text vertically aligned (#7)

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -86,7 +86,7 @@ a:hover {
 
 a.g3-button {
   display: inline-block;
-  line-height: 49px;
+  line-height: 54px;
 }
 
 a.g3-button:hover {
